# ecom-scraper

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py  compare.py  database.py  docker-entrypoint.sh  init_db.py  jobs.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 2a9c4f6c9b7b_add_filter_mode.py  845baf25f302_add_job_counters.py
backend/scraper/: __init__.py  amazon.py  base.py  mercadolibre.py
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CompareTable.jsx  JobForm.jsx  LiveLog.jsx  PriceChart.jsx  ResultsTable.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  JobDetail.jsx
