[project]
name = "ecom-scraper-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "lxml>=4.9",
    "httpx>=0.25",
    "playwright>=1.41",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dateutil>=2.8",
]

[tool.uv]
package = false
